crates/icydb-core/tests/ui/db/response/cardinality_ext_impl_sealed.stderr
error[E0277]: the trait bound `ExternalCardinality<E>: db::query::api::result_ext::private::SealedResponseCardinalityExt<E>` is not satisfied
 --> tests/ui/db/response/cardinality_ext_impl_sealed.rs:9:51
  |
9 | impl<E: EntityKind> ResponseCardinalityExt<E> for ExternalCardinality<E> {
  |                                                   ^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `db::query::api::result_ext::private::SealedResponseCardinalityExt<E>` is not implemented for `ExternalCardinality<E>`
 --> tests/ui/db/response/cardinality_ext_impl_sealed.rs:7:1
  |
7 | struct ExternalCardinality<E: EntityKind>(PhantomData<E>);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: the trait `db::query::api::result_ext::private::SealedResponseCardinalityExt<E>` is implemented for `RowResponse<Row<E>>`
 --> src/db/query/api/result_ext.rs
  |
  |     impl<E: EntityKind> SealedResponseCardinalityExt<E> for EntityResponse<E> {}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ResponseCardinalityExt`
 --> src/db/query/api/result_ext.rs
  |
  | pub trait ResponseCardinalityExt<E: EntityKind>: SealedResponseCardinalityExt<E> {
  |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ResponseCardinalityExt`
  = note: `ResponseCardinalityExt` is a "sealed trait", because to implement it you also need to implement `icydb_core::db::query::api::result_ext::private::SealedResponseCardinalityExt`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following type implements the trait:
            icydb_core::db::RowResponse<icydb_core::db::Row<E>>
